# loops

./: .gitignore  AGENTS.md  DESIGN.md  LAYOUT.md  Makefile  README.md  hello_world.md  progress.md  push-pr.py  pyproject.toml
.github/workflows/: tests.yml
docs/flows/: ref.force-option.md  ref.inner-loop-unit-tests.md  ref.inner-loop.md  ref.integration-test-flow.md  ref.outer-loop.md  ref.pr-status-fetcher.md
docs/research/: 2026-02-21-research-prompt-caching-inner-loop-resume.md  2026-03-01-research-github-actions-ci-status-values.md
docs/specs/: 2026-02-09-manage-inner-loop-state-machine.md  2026-03-01-end2end-integration-test-target.md  validation-2026-03-01-deterministic-test-import-context.md
loops/: TODO.md  __init__.py  __main__.py  approval_config.py  cleanup.py  cli.py  handoff_handlers.py  inner_loop.py  inner_loop_runtime_config.py  logging_utils.py  outer_loop.py  provider_types.py  run_record.py  state_signal.py  task_provider.py
loops/commands/: __init__.py  clean.py  doctor.py  handoff.py  init.py  inner_loop.py  run.py
loops/core/: __init__.py  cli.py  handoff_handlers.py  hooks.py  inner_loop.py  outer_loop.py
loops/providers/: __init__.py  github_projects_v2.py  registry.py
scripts/: push-pr.py
tests/: conftest.py  test_cli.py  test_github_projects_v2_provider.py  test_handoff_handlers.py  test_hooks.py  test_inner_loop.py  test_integ_github_setup.py  test_logging_utils.py  test_outer_loop.py  test_provider_registry.py  test_push_pr_script.py  test_run_record.py  test_state_signal.py  test_test_import_context.py
(+31 files in other folders)
